--- a/benchmark-mlflow/benchmark-mlflow-deployment.yaml
+++ b/benchmark-mlflow/benchmark-mlflow-deployment.yaml
@@ -42,6 +42,10 @@ spec:
           value: "8003"
         - name: BENCHMARK_EVAL_URL
           value: "http://benchmark-eval:8004/evaluate"
+        - name: NEW_MODEL_EVALUATION
+          value: "true"
+        - name: ARGO_FILE_PATH
+          value: "argo-application.yaml"
         resources:
           requests:
             memory: "128Mi"
