--- a/benchmark-eval/benchmark-eval-deployment.yaml
+++ b/benchmark-eval/benchmark-eval-deployment.yaml
@@ -37,7 +37,7 @@ spec:
         - name: GITHUB_REPO
           value: "mlflow-vllm"
         - name: GITHUB_CONFIG_PATH
-          value: "evaluate/evaluate.config"
+          value: "template/evaluate.yaml"
         - name: GITHUB_TOKEN
           valueFrom:
             secretKeyRef:
