Enhance Dockerfile for benchmark-deployer by adding kubectl and Helm installation
- Updated system dependencies to include wget and gnupg2.
- Added installation steps for kubectl and Helm to facilitate Kubernetes management.

--- a/benchmark-deployer/Dockerfile
+++ b/benchmark-deployer/Dockerfile
@@ -3,9 +3,21 @@ FROM python:3.9-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies and tools
 RUN apt-get update && apt-get install -y \
-    gcc curl \
+    gcc curl wget gnupg2 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install kubectl
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
+    && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl \
+    && rm kubectl
+
+# Install Helm
+RUN curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | tee /usr/share/keyrings/helm.gpg > /dev/null \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list \
+    && apt-get update \
+    && apt-get install helm \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
