Refactor deployer and queue management for improved Helm chart handling and request deletion
- Updated the chart directory path in the DeployerManager to use '/tmp/app-charts'.
- Enhanced error handling for missing local charts, raising exceptions when both local and remote options fail.
- Modified the Dockerfile to create necessary directories with proper ownership for the application.
- Updated the delete_queue_request method in QueueManager to support forced deletions, allowing for cleanup of processing requests.
- Introduced a new endpoint for forcefully deleting queue requests in the FastAPI application.

--- a/benchmark-deployer/Dockerfile
+++ b/benchmark-deployer/Dockerfile
@@ -29,14 +29,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Create directory for kubeconfig and temp charts
-RUN mkdir -p /root/.kube /tmp/charts
+# Create non-root user first
+RUN useradd --create-home --shell /bin/bash app
 
-# Create non-root user
-RUN useradd --create-home --shell /bin/bash app \
-    && chown -R app:app /app \
-    && mkdir -p /home/app/.kube /home/app/tmp \
-    && chown -R app:app /home/app
+# Create directories with proper ownership
+RUN mkdir -p /root/.kube /home/app/.kube /home/app/charts /tmp/app-charts \
+    && chown -R app:app /app /home/app /tmp/app-charts \
+    && chmod 755 /tmp/app-charts
+
 USER app
 
 # Expose port
