Add GitHub token support for cloning Helm charts in VLLMManager
- Introduced an environment variable for GITHUB_TOKEN to enable authenticated cloning of private repositories.
- Updated the vllm_manager.py to use the GitHub token for cloning, with a fallback to public access if the token is not available.
- Modified the benchmark-vllm-deployment.yaml to include the GITHUB_TOKEN as a secret reference for secure access.

--- a/benchmark-vllm/benchmark-vllm-deployment.yaml
+++ b/benchmark-vllm/benchmark-vllm-deployment.yaml
@@ -53,6 +53,11 @@ spec:
           value: "true"
         - name: QUEUE_SCHEDULER_POLL_INTERVAL
           value: "30"
+        - name: GITHUB_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: benchmark-shared-secrets
+              key: GITHUB_TOKEN
         volumeMounts:
         - name: config-volume
           mountPath: /app/configs
