--- a/benchmark-vllm/benchmark-vllm-deployment.yaml
+++ b/benchmark-vllm/benchmark-vllm-deployment.yaml
@@ -28,7 +28,7 @@ spec:
         - name: SERVER_PORT
           value: "8005"
         - name: MONGO_URL
-          value: "mongodb://mongo-primary.default.svc.cluster.local:27017/?directConnection=true&serverSelectionTimeoutMS=5000&connectTimeoutMS=5000"
+          value: "mongodb://admin:password123@mongo-service:27017/?replicaSet=rs0&authSource=admin"
         - name: DATABASE_NAME
           value: "benchmark_vllm"
         - name: VLLM_CONFIG_DIR
