Enhance Helm deployment process and logging in VLLMManager
- Added timeout and failure threshold settings for readiness and liveness probes in the deployment YAML, improving resilience during startup.
- Updated logging to provide clearer insights into the Helm deployment process, including non-blocking execution and status monitoring.
- Enhanced error handling for deployment failures, ensuring informative messages are logged for better tracking and debugging.

--- a/benchmark-vllm/benchmark-vllm-deployment.yaml
+++ b/benchmark-vllm/benchmark-vllm-deployment.yaml
@@ -77,12 +77,16 @@ spec:
             port: 8005
           initialDelaySeconds: 30
           periodSeconds: 30
+          timeoutSeconds: 5
+          failureThreshold: 25  # Allow 25 failures = 30s * 25 = 12.5 minutes
         readinessProbe:
           httpGet:
             path: /health
             port: 8005
           initialDelaySeconds: 5
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 10  # Allow 10 failures = 10s * 10 = 100 seconds
       volumes:
       - name: config-volume
         configMap:
