--- a/benchmark-eval/requirements.txt
+++ b/benchmark-eval/requirements.txt
@@ -4,4 +4,5 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 httpx==0.25.2
 PyYAML==6.0.1
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+requests==2.32.3 
