Update GITHUB_TOKEN comment to remove Base64 encoding instructions
- Remove Base64 encoding instructions from GITHUB_TOKEN comment
- Simplify comment to "GitHub access token" since stringData handles encoding automatically
- File: benchmark-shared-secrets.yaml

--- a/benchmark-shared-secrets.yaml
+++ b/benchmark-shared-secrets.yaml
@@ -6,6 +6,5 @@ type: Opaque
 stringData:
   MONGO_URL: ""
   
-  # Base64 encoded GitHub token  
-  # To set: echo -n "your_github_token_here" | base64
+  # GitHub access token  
   GITHUB_TOKEN: ""
